This PR introduces a centralized exception handling mechanism for the API, using a GlobalExceptionHandler with @ControllerAdvice. The changes include:
- Custom NotFound exceptions for Customer, Product, and FiscalMovement.
- Controllers updated to remove direct exception handling and rely on the global handler.
- GET endpoints now consistently return:
    - 200 OK with data when items are found.
    - 204 No Content when lists are empty (Customer).
    - 404 Not Found when an item does not exist (by ID or table).
- Unit and integration tests updated to reflect the new response statuses.

This ensures consistent error responses across all controllers, simplifies
controller code, and aligns with RESTful API best practices.